--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,4 +44,10 @@
         </intent>
     </queries>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+<!-- Suggested code may be subject to a license. Learn more: ~LicenseLog:2464070844. -->
+<!-- Suggested code may be subject to a license. Learn more: ~LicenseLog:1389178420. -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+">
 </manifest>
