--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_local_notifications: ^18.0.1
   multi_select_flutter: ^4.1.3
+  geolocator: ^13.0.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
