--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   geolocator: ^13.0.2
   http: ^1.2.2
+  google_maps_flutter: ^2.10.0
 
 dev_dependencies:
   flutter_test:
