--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geolocator: ^13.0.2
   http: ^1.2.2
   google_maps_flutter: ^2.10.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
