--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   shared_preferences: ^2.3.3
   fl_chart: ^0.69.0
   intl: ^0.19.0
-  file_picker: ^8.1.4
+  file_picker: ^8.1.5
   firebase_storage: ^12.3.6
   url_launcher: ^6.3.1
   flutter_local_notifications: ^18.0.1
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.2.2
   google_maps_flutter: ^2.10.0
   image_picker: ^1.1.2
+  url_launcher_web: ^2.3.3
 
 dev_dependencies:
   flutter_test:
