--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   image_picker: ^1.1.2
   url_launcher_web: ^2.3.3
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
